<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/app_name"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"

        />
    <item
        android:id="@+id/actionAdd"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="true"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/actionDelete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="true"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/actionFilter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:visible="true"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/actionLogin"
        android:orderInCategory="100"

        android:title="@string/action_login" />
    <item
        android:id="@+id/actionOut"
        android:orderInCategory="100"
        android:title="@string/action_logout" />
</menu>